methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:11: error: not found: value True
  if (vuBiscuit == True) {
                   ^